--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "bundle/rails"]
 	path = bundle/rails
 	url = git://github.com/tpope/vim-rails.git
+[submodule "bundle/visual_studio"]
+	path = bundle/visual_studio
+	url = https://github.com/vim-scripts/visual_studio.vim.git
