--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "bundle/rails"]
 	path = bundle/rails
 	url = git://github.com/tpope/vim-rails.git
+[submodule "bundle/slimv"]
+	path = bundle/slimv
+	url = git://github.com/vim-scripts/slimv.vim
