--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/slimv"]
 	path = bundle/slimv
 	url = git://github.com/memleaks/slimv.vim
+[submodule "bundle/vimerl"]
+	path = bundle/vimerl
+	url = git://github.com/memleaks/vimerl.git
