added vim-ruby bundle

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "bundle/vim-erlang-compiler"]
 	path = bundle/vim-erlang-compiler
 	url = git://github.com/vim-erlang/vim-erlang-compiler.git
+[submodule "bundle/vim-ruby"]
+	path = bundle/vim-ruby
+	url = git://github.com/vim-ruby/vim-ruby.git
